# Aldaron's Device Interface - Storage - Demo                                  #
# Copyright (c) 2017 Plop Grizzly, Jeron Lau <jeron.lau@plopgrizzly.com>       #
# Licensed under the MIT LICENSE                                               #
#                                                                              #
# Cargo.toml                                                                   #

[package]
name = "storage_app"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.tech>"]
build = "build.rs"
homepage = "https://github.com/aldarons-tech"

[dependencies]
adi_storage = { path = "../../" }

[build-dependencies]
res = { path = "/home/aldaron/aldarons_tech/res" } #"0.1.0"

[package.metadata.res]
developer = "Aldaron's Tech"
name = "%Storage App"
comment = "%comment"
description = "%read the root directory and user's username"
